⚙️ Ajout de plus de projets de test. ⚙️ Réduction du nombre de technologies visible par projet avant d'afficher un +. 🔧 Bug fix: mauvaise application du responsive sur la grille de projets.

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,7 @@
 @use "tailwindcss";
 
 body {
-  @apply bg-gradient-to-r from-[#07c8f9] via-[#0a85ed] to-[#0d41e1];
+  @apply bg-gradient-to-r from-[#4751ff] via-[#5a71d8] to-[#305dd9];
   @apply mt-16 mx-4 md:mx-16 lg:mx-32 xl:mx-64 2xl:mx-96;
 }
 
